# desktoppet

./: .gitignore  PRD.md  RAG-PRD.md  RAG_TECHNICAL_DESIGN.md  RAG_TROUBLESHOOTING.md  README.md  TECHNICAL_DESIGN.md
desktoppet/: index.html  package-lock.json  package.json
desktoppet/src/: App.vue
desktoppet/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktoppet/src-tauri/capabilities/: default.json
desktoppet/src-tauri/models/: model.onnx
desktoppet/src-tauri/src/: lib.rs  main.rs
desktoppet/src-tauri/src/bubble/: mod.rs
desktoppet/src-tauri/src/file_handler/: image.rs  mod.rs  office.rs  pdf.rs  text.rs
desktoppet/src-tauri/src/llm/: context.rs  mod.rs
desktoppet/src-tauri/src/llm/providers/: deepseek.rs  kimi.rs  mod.rs  qwen.rs
desktoppet/src-tauri/src/monitor/: input.rs  mod.rs  system.rs
desktoppet/src-tauri/src/rag/: chunking.rs  embedding.rs  mod.rs  store.rs
desktoppet/src-tauri/src/state_machine/: mod.rs  states.rs  transitions.rs
desktoppet/src-tauri/src/store/: config.rs
desktoppet/src/assets/pets/default/: bubbles.json  config.toml
desktoppet/src/components/: Pet.vue  PetBubble.vue  PetChat.vue  PetDebug.vue  PetMenu.vue  PetSettings.vue
desktoppet/src/composables/: useAnimation.js  useChat.js  usePanelDrag.js  usePetDrag.js  usePetState.js
desktoppet/src/stores/: petStore.js
